--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Check go Ver
+        run:  go version
       - name: Run test
         run: make test
 
