--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -14,8 +14,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Check go Ver
-        run:  go version
       - name: Run test
         run: make test
 
+      - name: Docker Hub login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push
+        env:
+          REGISTRY: ${{ secrets.DOCKERHUB_USERNAME }}
+        run: make image push TARGETARCH=$TARGETARCH
+      - name: Clean
+        run: make clean TARGETARCH=$TARGETARCH
