--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -7,7 +7,7 @@ image:
   registry: "ghcr.io"
   repository: "io-err/go-telegram-bot"
   tag: "d41679d"
-  os: "linux"
+  os: linux
   arch: amd64
 secret:
   name: "telegram-bot"
