--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 image:
   registry: "ghcr.io"
-  repository: "io-err/kbot"
+  repository: "io-err/go-telegram-bot"
   tag: "v1.1.1-a79578b"
   os: linux
   arch: amd64
@@ -15,3 +15,4 @@ secret:
   key: "token"
 securityContext:
   privileged: true
+c
