--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -2,8 +2,8 @@ pipeline {
     agent any
 
    parameters {
-       choice(name: 'TARGETOS', choices: ['linux', 'windows'], description: 'Select the target OS')
-       choice(name: 'TARGETARCH', choices: ['amd64', 'arm64'], description: 'Select the target arch')
+       choice(name: 'TARGETOS', choices: ['linux', 'windows'], description: 'Pick OS')
+       choice(name: 'TARGETARCH', choices: ['amd64', 'arm64'], description: 'Pick ARCH')
 
    }
 
